Started work on securing endpoints